Fix images and paragraphs on IE
IE has two problems:
* images with height: auto don't work without min-heigh
* paragraps can take more space than their container

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -126,6 +126,14 @@ body {
 	background: #fff;
 }
 
+img {
+  min-height: 1px;
+}
+
+p {
+  width: 100%;
+}
+
 .heading {
 	margin-bottom: 5em;
 	&.heading-sm {
